<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Smart Alarm</string>

    <!-- MainActivity -->
    <string name="btn_set_alarm">Set Alarm</string>
    <string name="btn_snooze">Snooze</string>
    <string name="btn_cancel_alarm">Cancel Alarm</string>
    <string name="btn_settings">Settings</string>
    <string name="alarm_not_set">Alarm is not set</string>
    <string name="alarm_set">Alarm set for %s</string>
    <string name="alarm_snoozed">Alarm snoozed for %s</string>
    <string name="alarm_cancelled">Alarm cancelled</string>
    <string name="alarm_ringing">Alarm is ringing!!!</string>

    <string name="notification_title">Alarm</string>
    <string name="notification_text">Time to wake up!</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_city_label">City:</string>
    <string name="settings_city_hint">Enter city name</string>
    <string name="settings_language_label">Language:</string>
    <string name="settings_btn_save">Save Settings</string>
    <string name="settings_error_empty_city">Enter city name</string>
    <string name="settings_saved">Settings saved</string>
    <string name="settings_speak_name_day">Name day:</string>
    <string name="settings_speak_name_day_text">Name day will be spoken</string>



    <!-- Languages -->
    <string name="lang_english">🇬🇧 English</string>
    <string name="lang_russian">🇷🇺 Russian</string>
    <string name="lang_finnish">🇫🇮 Finnish</string>

    <!-- TTS Messages -->
    <string name="tts_alarm_message">Good morning! Time to wake up!</string>
    <string name="tts_weather">In %s, temperature is %d degrees. %s</string>
    <string name="tts_error_weather">Could not get weather information</string>
    <string name="tts_name_day">Today is name day for %s</string>


    <!-- Toast Messages -->
    <string name="tts_init_error">TextToSpeech not initialized</string>

    <!-- Permissions Messages -->
    <string name="notification_permission_granted">Notification permission granted</string>
    <string name="notification_permission_denied">Notification permission denied. Please enable it in app settings.</string>

</resources>